# GuimicK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TaskManager.pro
ConfigurationEditingTool/: CMakeLists.txt  ConfigurationEditingTool.pro  aboutdialog.ui  abstractbackupjobdisplay.cpp  abstractbackupjobdisplay.h  abstractbackupjobdisplay.ui  abstractdisplay.cpp  abstractdisplay.h  abstracteditjobdialog.cpp  abstracteditjobdialog.h  abstractjobdisplay.cpp  abstractjobdisplay.ui  choosefiledialog.ui  configurationcheckdialog.cpp  diskspacejobdisplay.cpp  diskspacejobdisplay.h  editbackupjobdialog.cpp  editbackupjobdialog.h  editbackupjobdialog.ui  editbackupjobwidget.h  editconsolejobdialog.cpp  editconsolejobdialog.h  editconsolejobdialog.ui  editdiskspacejobdialog.h  editgitfsbackupjobdialog.ui  editrsnapshotbackupjobdialog.cpp  editrsnapshotbackupjobdialog.ui  editrsyncfsbackupjobdialog.cpp  editrsyncfsbackupjobdialog.h  editrsyncfsbackupjobdialog.ui  editshutdownjobdialog.ui  editwakejobdialog.cpp  editwakejobdialog.h  editwakejobdialog.ui  editzipcopybackupdialog.h  editzipcopybackupdialog.ui  jobdatamodel.cpp  jobdatamodel.h  jobdelegate.cpp  jobdelegate.h  (+16 more)
ConfigurationEditingTool/proj/cmake/: CMakeLists.txt
ConfigurationEditingTool/proj/qmake/: ConfigurationEditingTool.pro
ConfigurationEditingTool/resources/: resources.qrc
ConfigurationEditingTool/scripts/: BuildWin64VsRelease.bat  MakeLinuxGccRelease.sh  MakeWin64ClientRelease.bat  MakeWin64VsDebug.bat  MakeWin64VsRelease.bat  MakeWindowsVsBuild.cmd
ConfigurationEditingTool/src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abstractbackupjobdisplay.cpp  abstractbackupjobdisplay.h  abstractbackupjobdisplay.ui  abstracteditjobdialog.cpp  abstracteditjobdialog.h  abstractjobdisplay.cpp  abstractjobdisplay.h  adminrightswarning.cpp  adminrightswarning.h  adminrightswarning.ui  choosefiledialog.cpp  choosefiledialog.h  configurationcheckdialog.cpp  configurationcheckdialog.h  configurationcheckdialog.ui  configurationtypedialog.cpp  configurationtypedialog.h  configurationtypedialog.ui  consolejobdisplay.cpp  consolejobdisplay.h  consolejobdisplay.ui  destinationpathvalidator.cpp  destinationpathvalidator.h  diskspacejobdisplay.cpp  diskspacejobdisplay.h  diskspacejobdisplay.ui  editabstractjobdialog.cpp  editabstractjobdialog.h  editabstractjobdialog.ui  editbackupjobdialog.h  editbackupjobdialog.ui  editbackupjobwidget.cpp  editbackupjobwidget.h  editbackupjobwidget.ui  editcheckdiskjobdialog.cpp  editcheckdiskjobdialog.h  editcheckdiskjobdialog.ui  (+56 more)
ConfigurationEditingTool/src/scheduler/: abstractscheduler.cpp  abstractscheduler.h  baseschedulererrormanager.h  credentials.h  scheduledata.cpp  scheduledata.h  schedulerdialog.cpp  schedulerdialog.h  schedulerdialog.ui  schedulererrormanager.cpp  schedulererrormanager.h  windowsscheduler.cpp  windowsscheduler.h
ConfigurationEditingTool/src/tasktoolrun/: abstracttasktoolrunner.cpp  abstracttasktoolrunner.h  errormessagecreator.cpp  errormessagecreator.h  linuxtasktoolrunner.cpp  linuxtasktoolrunner.h  tasktooldata.h  tasktoolrundialog.cpp  tasktoolrundialog.h
ConfigurationEditingTool/src/wakejob/: wakejobdisplay.cpp
FullTestSuite/proj/cmake/: CMakeLists.txt
TaskLib/proj/cmake/: CMakeLists.txt
TaskTestLib/proj/cmake/: CMakeLists.txt
TaskTestTool/proj/cmake/: CMakeLists.txt
TaskTests/proj/cmake/: CMakeLists.txt
TaskTool/: BuildTools.sh  CMakeLists.txt  MakeLinuxParticalStaticBuild.sh  MakeReleaseBuild.sh  MakeReleaseBuildWithCurl.sh  MakeSynologyBuild.sh  ReleasePlan.txt  TaskTool.pro  WorkLog.txt  backupConfiguration.sh  curldispatcherreplacer.cpp  curldispatcherreplacer.h  curllibreportdispatcher.cpp  curllibreportdispatcher.h  deployNewVersion.sh  emaildispatcherfactory.cpp  emaildispatcherfactory.h  main.cpp
TaskTool/data/: Windows configuration.txt  apt-update.txt  configuration.txt  currentClientConfig.txt  currentProductionConfig.txt  drivespacecheck.txt  git.txt  mailContents.txt  productionConfig.txt  realconf.txt  rsnapshot.conf  simpletest.txt  smallattachment.txt  smallattachment2.txt  testingConfiguration.txt  wakeComputer.sh
TaskTool/data/scripts/: BuildTools.sh  MakeDebugBuild.sh  deployNewVersion.sh
TaskTool/proj/: FeedbackEwerton.txt  ReleasePlan.txt  WorkLog.txt
TaskTool/proj/cmake/: CMakeLists.txt
TaskTool/proj/qmake/: TaskTool.pro
TaskTool/scripts/: BuildTools.sh  MakeAllSynologyBinaries.sh  MakeCrossWindowsRelease.sh  MakeLinuxDebug.sh  MakeLinuxGccDebug.sh  MakeLinuxGccRelease.sh  MakeLinuxInstallPackage.sh  MakeLinuxRelease.sh  MakeNativeWindowsRelease.bat  MakeSynology.sh  MakeWin64VsDebug.bat  MakeWin64VsRelease.bat  MakeWindowsBuild.cmd  MakeWindowsPackage.sh  MakeWindowsVsBuild.cmd  deployNewVersion.sh  synology.cmake  win64.cmake  winNative.cmake
TaskTool/src/: curldispatcherreplacer.cpp  curldispatcherreplacer.h  curllibreportdispatcher.cpp  curllibreportdispatcher.h  main.cpp
TaskToolLauncher/: CMakeLists.txt
TaskToolLauncher/proj/cmake/: CMakeLists.txt
TaskToolLauncher/scripts/: MakeWin64VsRelease.bat
TaskToolLauncher/src/: main.cpp
libs/ReportParsers/tests/: CMakeLists.txt
libs/TaskLib/: CMakeLists.txt
libs/TaskLib/include/: AbstractConsoleJob.h  AbstractReportDispatcher.h  BotData.h  SelfIdentity.h  WorkExecutionManager.h  abstractbackupjob.h  abstractbackupjobconfiguration.h  abstractcopyfsbackupjob.h  abstractemailreportdispatcher.h  abstractjobconfiguration.h  abstractreportdispatcherreplacer.h  abstractstructuredreportcreator.h  abstracttypeconfiguration.h  abstractwakejob.h  archivefsbackupjob.h  archivetool.h  backupjobstatus.h  backupstatusmanager.h  clamavjobconfiguration.h  clientjobsconfiguration.h  consolejob.h  copyjobchooser.h  curlconsoleemailsender.h  debugoutput.h  diskrelatedjob.h  dummyemailreportdispatcher.h  emailaccountdataconfiguration.h  gitbackupjob.h  gitfsbackupjobconfiguration.h  gittools.h  jobstatus.h  libwakejob.h  linuxcopyfsbackupjob.h  linuxshutdownjob.h  localclientconfiguration.h  maintoolmodule.h  rawcopyfsbackupjob.h  remotejobsrunnerconfiguration.h  (+12 more)
(+1092 files in other folders)
